game-javadoc.err
src\game\GameModel.java:687: warning: no @param for i
	protected String getRow(int i) {
	                 ^
src\game\GameModel.java:720: error: @param name not found
	 * @param gridSize the gridSize to set
	          ^
src\game\GameModel.java:722: warning: no @param for currentValid
	protected void setCurrentValid(int currentValid) {
	               ^
src\game\GameModel.java:762: error: @param name not found
	 * @param Score the score to set
	          ^
src\game\GameModel.java:764: warning: no @param for score
	protected void setScore(int score) {
	               ^
src\game\GameView.java:176: warning: no description for @param
	 * @param window
	   ^
src\game\GameView.java:179: warning: no description for @param
	 * @param gameMode
	   ^
src\game\GameView.java:399: warning: no description for @param
	 * @param gridSize
	   ^
src\game\GameView.java:400: warning: no description for @param
	 * @param markMode
	   ^
src\game\GameView.java:401: warning: no description for @return
	 * @return
	   ^
src\game\GameView.java:588: error: @param name not found
	 * @param currentLocale - Used to get the selected language. 
	          ^
src\game\GameView.java:591: warning: no @param for currentlocale
	protected void Play(Locale currentlocale, ResourceBundle langText) {
	               ^
src\game\GameView.java:612: error: @param name not found
	 * @param currentLocale - Used to get the selected language. 
	          ^
src\game\GameView.java:614: warning: no description for @param
	 * @param bestScore
	   ^
src\game\GameView.java:615: warning: no description for @param
	 * @param bestTime
	   ^
src\game\GameView.java:617: warning: no @param for currentlocale
	protected void gameCompleted(Locale currentlocale, ResourceBundle langText, int bestScore, int bestTime) {
	               ^
